feat: secure api keys and remove health sync
- Move Firebase config to .env (excluded from git)
- Remove Health Sync feature and dependencies
- Implement Goals system and UI fixes
- Fix onboarding race condition

--- a/app.json
+++ b/app.json
@@ -6,14 +6,21 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nevoiflah.forproject",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSHealthShareUsageDescription": "FOR needs access to your health data to analyze Sleep and Activity trends.",
+        "NSHealthUpdateUsageDescription": "FOR uses health data for personalized recovery coaching."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +32,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "19bbbaf9-a86c-4106-a298-1321f61271df"
+      }
     }
   }
 }
