--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo-device": "~8.0.10",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
+    "expo-local-authentication": "~17.0.8",
     "expo-notifications": "~0.32.16",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "firebase": "^11.4.0",
     "lucide-react-native": "^0.562.0",
