--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-health": "^1.19.0",
     "react-native-permissions": "^5.4.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~5.6.0",
