Fix splash screen: optimize launch, update logo, and disable new arch

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "FOR-Project",
+    "name": "F.O.R",
     "slug": "for-project",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/FOR-logo.png",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/FOR-logo.png",
       "resizeMode": "contain",
@@ -22,6 +22,10 @@
         "ITSAppUsesNonExemptEncryption": false,
         "NSHealthShareUsageDescription": "FOR needs access to your health data to analyze Sleep and Activity trends.",
         "NSHealthUpdateUsageDescription": "FOR uses health data for personalized recovery coaching."
+      },
+      "entitlements": {
+        "com.apple.developer.healthkit": true,
+        "com.apple.developer.healthkit.access": []
       }
     },
     "android": {
