--- a/app.json
+++ b/app.json
@@ -6,14 +6,15 @@
     "orientation": "portrait",
     "icon": "./assets/FOR-logo.png",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/FOR-logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#F5F5DC"
     },
     "plugins": [
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-font"
     ],
     "ios": {
       "supportsTablet": true,
@@ -31,7 +32,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/FOR-logo.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#F5F5DC"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
