--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-health": "^1.19.0",
     "react-native-permissions": "^5.4.4",
