--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 
 # dependencies
 node_modules/
+backend/node_modules/
+
+# Backend
+backend/dist/
+backend/.env
+backend/firebase-service-account.json
 
 # Expo
 .expo/
