--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-status-bar": "~3.0.9",
     "firebase": "^11.4.0",
     "lucide-react-native": "^0.562.0",
+    "mongodb": "^7.1.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-ble-plx": "^3.5.0",
