--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc",
     "dev": "nodemon --exec tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
