--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-local-authentication": "~17.0.8",
+    "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.13",
@@ -38,6 +39,7 @@
     "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-health": "^1.19.0",
+    "react-native-maps": "1.20.1",
     "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
